syntax = "proto3";

package customers.customer_credit_reserved.v1;

message CustomerCreditReserved {
    string event_id = 1;
    string correlation_id = 2;
    string customer_id = 3;
    string order_id = 4;
    string created_at = 6;
}
